--- a/lab-02/styles.css
+++ b/lab-02/styles.css
@@ -1,3 +1,33 @@
 nav {
     display: flex;
+    background-color: gray;
+    flex-direction: column;
+    order: 2;
+}
+
+nav a {
+    background-color: lightgray;
+    color: black;
+    padding: 0.25em 0.5em;
+    margin: 0.25em 0.5em;
+    transition: background-color 1.5s;
+    display: flex;
+}
+
+nav a:hover {
+    background-color: white;
+}
+
+header {
+    background-color: lightgray;
+}
+
+main {
+    background-color: lightgray;
+    flex-shrink: 0;
+    display:flex;
+}
+
+header, main, section {
+    overflow: auto;
 }
